:bug: :lipstick: Fix index page horizontal scroll

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -165,7 +165,6 @@ ul, ol {
   height: 100%;
   top: 0;
   left: 0;
-  padding: 15px 50px;
 
   display: flex;
   flex-direction: column;
@@ -228,8 +227,6 @@ ul, ol {
   display: flex;
   justify-content: space-between;
 }
-
-
 
 .container {
   margin: auto;
